src/objects/Discretionary_Spend__c/Discretionary_Spend__c.object-meta.xml
<CustomObject>
    <label>Discretionary Spend</label>
    <nameField>
        <displayFormat>DS-{0}</displayFormat>
        <label>Discretionary Spend Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discretionary Spend</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>