src/objects/Discretionary_Spend__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Discretionary Spend</relationshipLabel>
    <relationshipName>Discretionary_Spend</relationshipName>
    <type>Lookup</type>
</CustomField>