src/objects/Discretionary_Spend__c/fields/Discretionary_Account__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Account__c</fullName>
    <formula>Discretionary_Line_Item__r.Discretionary_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discretionary Account#</label>
    <type>Text</type>
</CustomField>