src/objects/Discretionary_Spend__c/fields/Discretionary_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Line_Item__c</fullName>
    <label>Discretionary Line Item</label>
    <referenceTo>Discretionary_Line_Item__c</referenceTo>
    <relationshipLabel>Discretionary Spend</relationshipLabel>
    <relationshipName>Discretionary_Spend</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>