src/objects/Discretionary_Spend__c/fields/Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>Plant_Code__c</fullName>
    <formula>Discretionary_Line_Item__r.Plant_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant Code</label>
    <type>Text</type>
</CustomField>