src/objects/Discretionary_Spend__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <formula>if( AND(  Discretionary_Line_Item__r.Discretionary_Request__r.Campaign__c  != Null,  Discretionary_Line_Item__r.Discretionary_Request__r.Opportunity__c = Null),   NULL   ,if( AND( Discretionary_Line_Item__r.Discretionary_Request__r.Opportunity__c!= Null, Discretionary_Line_Item__r.Discretionary_Request__r.Campaign__c = Null), Discretionary_Line_Item__r.Discretionary_Request__r.Opportunity__r.Program__c  ,NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program</label>
    <type>Text</type>
</CustomField>