src/objects/Discretionary_Spend__c/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <formula>text( Discretionary_Line_Item__r.Discretionary_Request__r.SBU__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SBU</label>
    <type>Text</type>
</CustomField>