src/objects/Discretionary_Spend__c/fields/Weekly_Actuals__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Actuals__c</fullName>
    <label>Weekly Actuals ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>